# binance-l2-orderbook

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  main.py  pyproject.toml
cmake/: CompilerWarnings.cmake  StandardProjectSettings.cmake
config/: binance.toml
include/core/: OrderBook.hpp
include/network/websocket/: WebSocketClient.hpp
include/utils/: SkipList.hpp
src/: BinanceEngine.cpp  BinanceOrderBook.hpp  CMakeLists.txt  Okex.cpp
src/config/: Config.cpp  Config.hpp
tests/: CMakeLists.txt  test_binance_client.cpp  test_orderbook.cpp  test_skip_list.cpp
