[project]
name = "crypto-book"
version = "0.1.0"
description = "Real-time cryptocurrency market data ingestion system using Binance WebSocket API"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "CryptoBook Contributors"}]

dependencies = [
    "black>=25.12.0",
    "ruff>=0.14.13",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W"]
